# waves

./: .gitmodules  CMakeLists.txt  README.md  run.sh  shell.nix
dependencies/stbi/: CMakeLists.txt
include/: animation.hpp  consts.hpp  enemie.hpp  entity.hpp  game.hpp  gamedata.hpp  indexbuffer.hpp  item.hpp  map.hpp  player.hpp  projectile.hpp  renderer.hpp  shader.hpp  spritesheet.hpp  statusbar.hpp  texture.hpp  tile.hpp  vertex.hpp  vertexarray.hpp  vertexbuffer.hpp  vertexbufferlayout.hpp  window.hpp
res/maps/: map.tmj
res/shaders/: basic.shader  shader.frag  shader.vert
src/: animation.cpp  enemie.cpp  entity.cpp  game.cpp  gamedata.cpp  indexbuffer.cpp  item.cpp  main.cpp  map.cpp  player.cpp  projectile.cpp  renderer.cpp  shader.cpp  spritesheet.cpp  statusbar.cpp  texture.cpp  tile.cpp  vertexarray.cpp  vertexbuffer.cpp  window.cpp
